fixing overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html, body, #root {
   overflow: hidden;
 }
 
-@media (min-width: 1024px) and (min-height: 401px) {
+@media (min-width: 1024px) and (min-height: 750px) {
   html,
   body,
   #root {
